# Pattern-Pilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  CONTEXT_BASED_REVIEW_WORKFLOW_PROPOSAL.md  Dockerfile  Pattern_Pilot_Architecture_v1.docx  README.md  alembic.ini  dashboard.html  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: Pattern_Pilot_LinkedIn_Knowledge_Base.docx  build_pattern_pilot_docx.sh  pattern_pilot_integration_view.html  pattern_pilot_linkedin_fresh.html  pattern_pilot_linkedin_fresh.md  pattern_pilot_linkedin_knowledge_base.html  ~$ttern_Pilot_LinkedIn_Knowledge_Base.docx
pattern_pilot/: __init__.py  mcp_server.py
pattern_pilot/api/: server.py
pattern_pilot/checks/: runner.py
pattern_pilot/connectors/: base.py  filesystem.py
pattern_pilot/context/: bundle_builder.py  context_resolver.py  import_follower.py
pattern_pilot/core/: config.py  contracts.py  orchestrator.py  reviewer.py
pattern_pilot/db/: models.py  session.py
pattern_pilot/governance/: loader.py
pattern_pilot/memory/: store.py
pattern_pilot/policies/: gates.py
pattern_pilot/reporting/: writer.py
pattern_pilot/scanner/: project_scanner.py
tests/: conftest.py  test_api_routes.py  test_bundle_builder.py  test_checks.py  test_connectors.py  test_context_parity.py  test_context_resolver.py  test_contracts.py  test_mcp_list_runs.py  test_mcp_status_formatting.py  test_metrics.py  test_orchestrator.py  test_phase1.py  test_request_construction.py  test_resubmit_identity.py  test_reviewer.py  test_store.py
(+15 files in other folders)
