[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pattern-pilot"
version = "1.0.0"
description = "Standalone code quality control plane — dual-LLM review loop"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.2,<3",
    "openai>=1.12,<2",
    "httpx>=0.27,<1",
    "typer>=0.12,<1",
    "rich>=13,<14",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "aiosqlite>=0.20,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
